# hike-mode

./: LICENSE  Makefile  README.md  install.sh  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: internals.md
even-terminal/: even-terminal-patch.py  free-sessions.py  resume-sessions.py  test_even_terminal_patch.py  test_free_sessions.py  test_resume_sessions.py
skills/hud-profile/: SKILL.md
test/: hike.bats
